<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.hofalab.hofalapp.DrawControlActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_undo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_undo"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button_send_gcode2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_execute"
            android:layout_weight="1" />
    </LinearLayout>

    <ImageView
        android:id="@+id/draw_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:background="@drawable/rect_border"
        android:contentDescription="@string/draw_description"
        android:cropToPadding="false" />

</LinearLayout>
