<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.hofalab.hofalapp.RemoteControlActivity">

    <EditText
        android:id="@+id/enterGcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_gcode"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_send_gcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_send_gcode"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button_draw_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_draw_mode"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_coord_plane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/coord_plane_entries" />

        <Spinner
            android:id="@+id/spinner_step_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/step_width" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggle_spindle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/button_spindle"
            android:textOn="@string/button_spindle" />

        <ToggleButton
            android:id="@+id/toggle_tilt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/button_tilt"
            android:textOn="@string/button_tilt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_NW"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="↖"
                android:textSize="30sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/button_N"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="↑"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/button_NE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="↗"
                android:textSize="30sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1" >
            <Button
                android:id="@+id/button_W"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="←"
                android:textSize="30sp"
                android:textStyle="bold" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"  />
            <Button
                android:id="@+id/button_E"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="→"
                android:textSize="30sp"
                android:textStyle="bold"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1" >
            <Button
                android:id="@+id/button_SW"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="↙"
                android:textSize="30sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/button_S"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="↓"
                android:textSize="30sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/button_SE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="↘"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
